[package]
name = "pio"
version = "0.1.0"
authors = ["snek"]
edition = "2018"
resolver = "2"
license = "MIT"

[workspace]
members = ["pio-proc", "pio-parser"]

[dependencies]
arrayvec = { version = "0.7", default_features = false }
paste = "1.0"
num_enum = { version = "0.5", default_features = false }

[dev-dependencies]
test-generator = "0.3.0"
pretty_assertions = "0.6"
pio-proc = { path = "./pio-proc" }
pio-parser = { path = "./pio-parser" }
