[package]
name = "pio"
version = "0.2.1"
authors = ["snek", "The rp-rs developers"]
edition = "2018"
resolver = "2"
license = "MIT"
description = "Support for the Raspberry Silicon RP2040's PIO State Machines."
repository = "https://github.com/rp-rs/pio-rs"

[workspace]
members = ["pio-proc", "pio-parser", "pio-core"]

[dependencies]
pio-core = { path = "./pio-core" }

[dev-dependencies]
test-generator = "0.3.0"
pretty_assertions = "1.4"
pio-proc = { path = "./pio-proc" }
pio-parser = { path = "./pio-parser" }
