[package]
name = "pio-parser"
version = "0.2.2"
authors = ["snek", "The rp-rs Developers"]
edition = "2018"
resolver = "2"
description = "Raspberry Silicon PIO asm parser"
license = "MIT"
repository = "https://github.com/rp-rs/pio-rs"

[dependencies]
lalrpop-util = { version = "0.19.6", features = ["lexer"] }
pio = { path = "..", version = "0.2.1" }

[build-dependencies]
lalrpop = "0.19.6"
# This is only here to work around https://github.com/lalrpop/lalrpop/issues/750
# It should be removed once that workaround is no longer needed.
regex-syntax = { version = "0.6", default_features = false, features = ["unicode"] }
