[package]
name = "pio-parser"
version = "0.2.2"
authors = ["snek", "The rp-rs Developers"]
edition = "2018"
resolver = "2"
description = "Raspberry Silicon PIO asm parser"
license = "MIT"
repository = "https://github.com/rp-rs/pio-rs"

[features]
default = ["rp2350"]
rp2350 = ["pio/rp2350"]

[dependencies]
lalrpop-util = { version = "0.21.0", features = ["lexer"] }
pio = { path = "..", version = "0.2.1" }

[build-dependencies]
lalrpop = "0.21.0"
