[package]
name = "pio-proc"
version = "0.2.1"
authors = ["snek", "The rp-rs Developers"]
edition = "2018"
resolver = "2"
license = "MIT"
repository = "https://github.com/rp-rs/pio-rs"
description = "proc-macro for assembling PIO code in a Rust program at compile time"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
proc-macro-error = "1.0"
syn = "1.0"
quote = "1.0"
codespan-reporting = "0.11"
pio = { path = "..", version = "0.2.0" }
pio-parser = { path = "../pio-parser", version = "0.2.0" }
lalrpop-util = "0.19.6"
# This is only here to work around https://github.com/lalrpop/lalrpop/issues/750
# It should be removed once that workaround is no longer needed.
regex-syntax = { version = "0.6", default_features = false, features = ["unicode"] }
